FIX: alignment for badges with images

--- a/src/assets/sass/_badge.scss
+++ b/src/assets/sass/_badge.scss
@@ -6,7 +6,6 @@
     align-items: flex-start;
 
     > * {
-        height: 28px; // prevents render jump
         margin-right: 0.5em;
         margin-bottom: 0.5em;
         outline-offset: 0.25em;
